7th event complete

--- a/less/global.less
+++ b/less/global.less
@@ -6,6 +6,18 @@ html {
   font-size: 62.5%;
 }
 
+body {
+  opacity: 1;
+  transition: 3.5s opacity;
+}
+
+.bgFade {
+  opacity: 0;
+  transition: none;
+}
+
+
+
 html, body {
   font-family: 'Roboto', sans-serif;
 }
