--- a/css/index.css
+++ b/css/index.css
@@ -132,6 +132,14 @@ table {
 html {
   font-size: 62.5%;
 }
+body {
+  opacity: 1;
+  transition: 3.5s opacity;
+}
+.bgFade {
+  opacity: 0;
+  transition: none;
+}
 html,
 body {
   font-family: 'Roboto', sans-serif;
